# multi-chain-wallet-platform

./: README.md
apps/api/: package-lock.json  package.json
apps/api/src/: app.module.ts  main.ts
apps/api/src/clients/: signer.client.ts
apps/api/src/common/: api-error.ts  http-excpetion.filter.ts  signer-error.util.ts  simulation-reason.util.ts
apps/api/src/dto/: transfer.dto.ts
apps/api/src/modules/transaction/: transaction.controller.ts  transaction.module.ts  transaction.service.ts
apps/api/src/modules/wallet/: wallet.controller.ts  wallet.module.ts  wallet.service.ts
apps/api/src/solana/: solana.service.ts
services/crypto-service/: Cargo.toml
services/crypto-service/src/: app.rs  error.rs  main.rs  models.rs  routes.rs  services.rs  state.rs
services/crypto-service/src/models/: requests.rs  responses.rs  signing.rs  simulation.rs
services/crypto-service/src/routes/: account.rs  devnet.rs  signing.rs  wallet.rs
services/crypto-service/src/services/: crypto_service.rs  simulation_service.rs  validation_service.rs  wallet_service.rs
