[package]
name = "crypto-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

solana-client = "3.1.12"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
solana-sdk = "3.0.0"

ed25519-dalek = "2.2.0"
bip39 = {version="2.0", package="tiny-bip39"}
rand = "0.10.1"
aes-gcm = "0.10.3"

thiserror = "2.0.18"
uuid = { version = "1.23.0", features = ["v4"] }
base64 = "0.22.1"
bincode = "1.3.3"
ed25519-dalek-bip32 = "0.3.0"
